--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                         alt="icone instagram"></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="Gabi.jpg" alt="foto da gabi">
-                <h3 class="estudante-nome">Gabriela</h3>
+                <img class="estudante-imagem" src="Bandas de Rock/Beatles.jpg" alt="foto da gabi">
+                <h3 class="estudante-nome">Beatles</h3>
                 <a href="https://github.com/GabrielaM-L"><img class="estudante-icone" src="github.png"
                         alt="icone github"></a>
                 <a href="https://www.linkedin.com/in/gabriela-marcomini-de-lima/"><img class="estudante-icone"
