--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">Sobre as Bandas de Rock</h2>
             <p class="escola-texto-um">As bandas de rock mais famosas do mundo que surgiram depois dos anos 1970 e inovaram o mundo do rock.</p>
-            <p class="escola-texto-dois">O rock é um gênero musical que se destaca pela sua energia, atitude e capacidade de provocar reflexões sociais e cultirais.</p>
+            <p class="escola-texto-dois">O rock é um gênero musical que se destaca pela sua energia, atitude e capacidade de provocar reflexões sociais e culturais.</p>
         </div>
         <img class="escola-imagem" src="Formula-bro.png" alt="imagem que representa uma professora em sala de aula">
     </section>
